package memento.game;

public class Memento {
    int money;
    public int getMoney() {
        return money;
    }
    Memento(int money){
        this.money=money;
    }
}
